<package format="2">
    <name>explore3d</name>
    <version>0.0.0</version>
    <description>explore3d</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Jonathan Butzke</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- <depend package="pcl"/> -->

    <depend>libpcl-all-dev</depend>
    <depend>nav_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf</depend>
</package>
